--- a/google-cloud-notebooks/pom.xml
+++ b/google-cloud-notebooks/pom.xml
@@ -69,7 +69,11 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-core</artifactId>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>com.google.api.grpc</groupId>
       <artifactId>grpc-google-cloud-notebooks-v1beta1</artifactId>
