--- a/.github/.OwlBot.yaml
+++ b/.github/.OwlBot.yaml
@@ -16,6 +16,7 @@ docker:
   image: "gcr.io/cloud-devrel-public-resources/owlbot-java:latest"
 
 deep-remove-regex:
+- "/samples/snippets/generated"
 - "/grpc-google-.*/src"
 - "/proto-google-.*/src"
 - "/google-.*/src"
@@ -41,3 +42,5 @@ deep-copy-regex:
 
 - source: "/google/cloud/notebooks/(v.*)/.*-java/gapic-google-.*/src"
   dest: "/owl-bot-staging/$1/google-cloud-notebooks/src"
+- source: "/google/cloud/notebooks/(v.*)/.*-java/samples/snippets/generated"
+  dest: "/owl-bot-staging/$1/samples/snippets/generated"
